  (Stephen Dolan, report by Richard Jones, review by Xavier Leroy)

### Compiler user-interface and warnings:

- #8702, #8777: improved error messages for fixed row polymorphic variants
  (Florian Angeletti, report by Leo White, review by Thomas Refis)

- #8874: add tests for typechecking error messages and pack them into
  pretty-printing boxes.
  (Oxana Kostikova, review by Gabriel Scherer)

### Bug fixes:

- #8622: Don't generate #! headers over 127 characters.
  (David Allsopp, review by Xavier Leroy and Stephen Dolan)

- #8715: minor bugfixes in CamlinternalFormat; removes the unused
  and misleading function CamlinternalFormat.string_of_formatting_gen
  (Gabriel Scherer and Florian Angeletti,
   review by Florian Angeletti and Gabriel Radanne)

- #8862, #8871: subst: preserve scopes
  (Thomas Refis, report by Leo White)

- #8875: fix missing newlines in the output from MSVC invocation.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

OCaml 4.09.0
------------

### Code generation and optimizations:

- #2278: Remove native code generation support for 32-bit Intel macOS,
  iOS and other Darwin targets.
  (Mark Shinwell, review by Nicolas Ojeda Bar and Xavier Leroy)

- #8507: Shorten symbol names of anonymous functions in Flambda mode
  (the directory portions are now hidden)
  (Mark Shinwell, review by Nicolás Ojeda Bär)

- #7931, #1904: Add FreeBSD/aarch64 support
  (Greg V, review by Sébastien Hinderer, Stephen Dolan, Damien Doligez
   and Xavier Leroy)

- #8547: Optimize matches that are an affine function of the input.
  (Stefan Muenzel, review by Alain Frisch, Gabriel Scherer)

- #8681, #8699, #8712: Fix code generation with nested let rec of functions.
  (Stephen Dolan, Leo White, Gabriel Scherer and Pierre Chambart,
   review by Gabriel Scherer, reports by Alexey Solovyev and Jonathan French)

### Compiler user-interface and warnings:

* #2276: Remove support for compiler plugins and hooks (also adds
  [Dynlink.unsafe_get_global_value])